# package_dev_poetry

./: Dockerfile  Makefile  README.md
hello/: pyproject.toml
